# rust-aoc-2020

./: Cargo.toml
day00/: Cargo.toml
day00/src/: lib.rs
day01/: Cargo.toml
day01/src/: lib.rs
day02/: Cargo.toml
day02/src/: lib.rs
day03/: Cargo.toml
day03/src/: lib.rs
day04/: Cargo.toml
day04/src/: lib.rs
day05/src/: lib.rs
day06/: Cargo.toml
day06/src/: lib.rs
day07/: Cargo.toml
day07/src/: lib.rs
src/: main.rs
