[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Joel Pedraza <joel.pedraza@walmartlabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
unstable = []

[dependencies]
day01 = { path = "day01" }
day02 = { path = "day02" }
day03 = { path = "day03" }
day04 = { path = "day04" }
day05 = { path = "day05" }
